[gd_scene load_steps=50 format=3 uid="uid://b5mqjtrue3qmf"]

[ext_resource type="Script" path="res://Essential/main_Stage.gd" id="1_f137u"]
[ext_resource type="PackedScene" uid="uid://baanwvtls0ow7" path="res://move_and_zoom.tscn" id="3_hm3hj"]
[ext_resource type="Theme" uid="uid://mhdwkcecl1i4" path="res://Assets/Theme/Fantasy_theme.tres" id="4_n3cl7"]
[ext_resource type="Script" path="res://unsorted.gd/UI.gd" id="4_s1bsp"]
[ext_resource type="Texture2D" uid="uid://cpmxs30skfr8r" path="res://Assets/Aseprite_made_by_Bowz/Tower_Sprites.png" id="5_corbn"]
[ext_resource type="Script" path="res://unsorted.gd/hide_button.gd" id="5_hdxhj"]
[ext_resource type="FontFile" uid="uid://27idn2k1vkqn" path="res://Assets/Theme/Renogare-Regular.otf" id="6_qubbl"]
[ext_resource type="Texture2D" uid="uid://bwplsxqgug3s7" path="res://Assets/Kenny/Kenny Fantasy UI/fantasy-ui-borders.svg" id="7_3v510"]
[ext_resource type="Texture2D" uid="uid://cpm1qnjtjfsvl" path="res://Assets/Aseprite_made_by_Bowz/Skull.png" id="8_6tojb"]
[ext_resource type="Texture2D" uid="uid://pwfbi5v8y4rl" path="res://Assets/Aseprite_made_by_Bowz/Flower.png" id="8_a7qyv"]
[ext_resource type="Texture2D" uid="uid://cfbc01ig1l8lj" path="res://Assets/Aseprite_made_by_Bowz/Dollar_Icon.png" id="9_3u1xu"]
[ext_resource type="Texture2D" uid="uid://8wjh2v48lmpu" path="res://Assets/Aseprite_made_by_Bowz/Axolotl.png" id="9_wrer2"]
[ext_resource type="Texture2D" uid="uid://c6axvvabni1oo" path="res://Assets/Aseprite_made_by_Bowz/Heart.png" id="10_je27x"]
[ext_resource type="PackedScene" uid="uid://b2sveifvvuhbm" path="res://unsorted.tscn/Mouse_trail.tscn" id="11_n2ubj"]
[ext_resource type="Texture2D" uid="uid://bgxg0qrdopt0h" path="res://Assets/Aseprite_made_by_Bowz/Play&Pause_Button.png" id="11_wy2bc"]
[ext_resource type="Texture2D" uid="uid://ebi10vvuvcww" path="res://Assets/Aseprite_made_by_Bowz/Ghost.png" id="13_utv0k"]
[ext_resource type="AudioStream" uid="uid://jcm3hknna6df" path="res://Sounds/Pause.wav" id="14_1nhxf"]
[ext_resource type="AudioStream" uid="uid://dtse5f38d5rmn" path="res://Sounds/Hurt.wav" id="15_smxhu"]
[ext_resource type="AudioStream" uid="uid://cplfoxemwuqqr" path="res://Sounds/Monster_Scream.wav" id="16_8dkql"]
[ext_resource type="Script" path="res://unsorted.gd/Menue_Panel.gd" id="17_chlvj"]
[ext_resource type="AudioStream" uid="uid://dny0b3hv6cerq" path="res://Sounds/loud-incorrect-buzzer-lie-meme-sound-effect.mp3" id="17_kj3g4"]
[ext_resource type="AudioStream" uid="uid://cbpraalv8ptjo" path="res://Sounds/Bump.wav" id="17_t87a7"]
[ext_resource type="AudioStream" uid="uid://bqnw1p5t36x4g" path="res://Sounds/Menu_In.wav" id="18_6yfku"]
[ext_resource type="AudioStream" uid="uid://cv8fna41s1fs7" path="res://Sounds/Click.wav" id="18_yunjg"]
[ext_resource type="AudioStream" uid="uid://0plefw62au2w" path="res://Sounds/Menu_Out.wav" id="19_eoi36"]
[ext_resource type="AudioStream" uid="uid://ner3yvl4r7sa" path="res://Assets/Music/tohomokosandcastles.mp3" id="19_ysbl4"]
[ext_resource type="Texture2D" uid="uid://hxkk3tstip64" path="res://Assets/Aseprite_made_by_Bowz/Bee.png" id="25_y55u1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pis8j"]
texture = ExtResource("7_3v510")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 16.0
region_rect = Rect2(226, 424, 48, 48)
modulate_color = Color(0.0941176, 0.0784314, 0.145098, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_amqdt"]
texture = ExtResource("7_3v510")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 16.0
region_rect = Rect2(226, 424, 48, 48)
modulate_color = Color(0.0941176, 0.0784314, 0.145098, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1wspf"]
texture = ExtResource("7_3v510")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 16.0
region_rect = Rect2(226, 424, 48, 48)
modulate_color = Color(0.0941176, 0.0784314, 0.145098, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_l151i"]
texture = ExtResource("7_3v510")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 16.0
region_rect = Rect2(226, 424, 48, 48)
modulate_color = Color(0.0941176, 0.0784314, 0.145098, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_aehgk"]
texture = ExtResource("7_3v510")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 16.0
region_rect = Rect2(226, 424, 48, 48)
modulate_color = Color(0.0941176, 0.0784314, 0.145098, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5djff"]
texture = ExtResource("7_3v510")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 16.0
region_rect = Rect2(226, 424, 48, 48)
modulate_color = Color(0.0941176, 0.0784314, 0.145098, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccyif"]
atlas = ExtResource("5_corbn")
region = Rect2(16, 0, 16, 16)

[sub_resource type="LabelSettings" id="LabelSettings_dwkyg"]
font = ExtResource("6_qubbl")
font_size = 8
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jtjw"]
atlas = ExtResource("5_corbn")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2m6g"]
atlas = ExtResource("5_corbn")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxmpr"]
atlas = ExtResource("5_corbn")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrjom"]
atlas = ExtResource("8_6tojb")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vr5gs"]
atlas = ExtResource("8_6tojb")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_p4ij2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrjom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vr5gs")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_fjjb5"]
atlas = ExtResource("11_wy2bc")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dq4ai"]
atlas = ExtResource("11_wy2bc")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v03ub"]
atlas = ExtResource("11_wy2bc")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0xn0"]
atlas = ExtResource("11_wy2bc")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yykgw"]
atlas = ExtResource("11_wy2bc")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4uwa"]
atlas = ExtResource("11_wy2bc")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_idqtt"]
atlas = ExtResource("11_wy2bc")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7v1o"]
atlas = ExtResource("11_wy2bc")
region = Rect2(16, 32, 16, 16)

[node name="Root" type="Node2D" node_paths=PackedStringArray("Turret_Container_node", "CAMERA", "UI", "next_wave_timer")]
script = ExtResource("1_f137u")
Turret_Container_node = NodePath("Turret_Container_node")
CAMERA = NodePath("Move_and_Zoom_Camera")
UI = NodePath("User_interface")
next_wave_timer = NodePath("next_wave_check")

[node name="Turret_Container_node" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Mouse_trail" parent="." instance=ExtResource("11_n2ubj")]
points = PackedVector2Array(517, 8)
width = 3.0
MAX_LENGHT = 100
metadata/_edit_lock_ = true

[node name="Move_and_Zoom_Camera" parent="." instance=ExtResource("3_hm3hj")]
anchor_mode = 0
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="Pivot_Bee" type="Sprite2D" parent="Move_and_Zoom_Camera"]
texture = ExtResource("25_y55u1")

[node name="User_interface" type="CanvasLayer" parent="." node_paths=PackedStringArray("HealthBar", "HealthLabel", "Stage_Name_Label", "WaveLabel", "MoneyLable", "Pause")]
script = ExtResource("4_s1bsp")
HealthBar = NodePath("Graphical_user_interface/Stage_Stats_Panel/Health_Icon")
HealthLabel = NodePath("Graphical_user_interface/Stage_Stats_Panel/Health_Icon/Health_Number")
Stage_Name_Label = NodePath("Graphical_user_interface/Stage_Name_Panel/Stage_Name")
WaveLabel = NodePath("Graphical_user_interface/Stage_Stats_Panel/Skull_Icon/Wellen_Lable")
MoneyLable = NodePath("Graphical_user_interface/Stage_Stats_Panel/Coin_Icon/Money_Label")
Pause = NodePath("Graphical_user_interface/Settings_Panel/Pause_and_Play_Button")

[node name="Graphical_user_interface" type="Control" parent="User_interface"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
mouse_filter = 1

[node name="Hide_UI_Button" type="CheckButton" parent="User_interface/Graphical_user_interface" node_paths=PackedStringArray("Tower_Panel", "Stats_Panel")]
layout_mode = 0
offset_left = 1010.0
offset_top = 574.0
offset_right = 1120.0
offset_bottom = 624.0
theme = ExtResource("4_n3cl7")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxTexture_pis8j")
theme_override_styles/pressed = SubResource("StyleBoxTexture_amqdt")
theme_override_styles/disabled = SubResource("StyleBoxTexture_1wspf")
theme_override_styles/hover = SubResource("StyleBoxTexture_l151i")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_aehgk")
theme_override_styles/focus = SubResource("StyleBoxTexture_5djff")
text = "Hide UI"
icon_alignment = 1
expand_icon = true
script = ExtResource("5_hdxhj")
Tower_Panel = NodePath("../Tower_Panel")
Stats_Panel = NodePath("../Stage_Stats_Panel")

[node name="Tower_Panel" type="Panel" parent="User_interface/Graphical_user_interface"]
layout_mode = 2
offset_left = 16.0
offset_top = 512.0
offset_right = 352.0
offset_bottom = 624.0
theme = ExtResource("4_n3cl7")

[node name="Tower_1" type="TextureButton" parent="User_interface/Graphical_user_interface/Tower_Panel"]
layout_mode = 0
offset_left = 32.0
offset_top = 16.0
offset_right = 64.0
offset_bottom = 48.0
texture_normal = SubResource("AtlasTexture_ccyif")
stretch_mode = 0

[node name="Label" type="Label" parent="User_interface/Graphical_user_interface/Tower_Panel/Tower_1"]
layout_mode = 0
offset_top = 32.0
offset_right = 32.0
offset_bottom = 42.0
text = "50 🪙"
label_settings = SubResource("LabelSettings_dwkyg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tower_2" type="TextureButton" parent="User_interface/Graphical_user_interface/Tower_Panel"]
layout_mode = 0
offset_left = 80.0
offset_top = 16.0
offset_right = 112.0
offset_bottom = 48.0
texture_normal = SubResource("AtlasTexture_2jtjw")
stretch_mode = 0

[node name="Label2" type="Label" parent="User_interface/Graphical_user_interface/Tower_Panel/Tower_2"]
layout_mode = 0
offset_top = 32.0
offset_right = 32.0
offset_bottom = 44.0
text = "125 🪙"
label_settings = SubResource("LabelSettings_dwkyg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tower_3" type="TextureButton" parent="User_interface/Graphical_user_interface/Tower_Panel"]
layout_mode = 0
offset_left = 128.0
offset_top = 16.0
offset_right = 160.0
offset_bottom = 48.0
texture_normal = SubResource("AtlasTexture_v2m6g")
stretch_mode = 0

[node name="Label3" type="Label" parent="User_interface/Graphical_user_interface/Tower_Panel/Tower_3"]
layout_mode = 0
offset_top = 32.0
offset_right = 32.0
offset_bottom = 44.0
text = "35 🪙"
label_settings = SubResource("LabelSettings_dwkyg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tower_4" type="TextureButton" parent="User_interface/Graphical_user_interface/Tower_Panel"]
layout_mode = 0
offset_left = 176.0
offset_top = 16.0
offset_right = 208.0
offset_bottom = 48.0
texture_normal = SubResource("AtlasTexture_nxmpr")
stretch_mode = 0

[node name="Label3" type="Label" parent="User_interface/Graphical_user_interface/Tower_Panel/Tower_4"]
layout_mode = 0
offset_top = 32.0
offset_right = 32.0
offset_bottom = 44.0
text = "100 🪙
"
label_settings = SubResource("LabelSettings_dwkyg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tower_5" type="TextureButton" parent="User_interface/Graphical_user_interface/Tower_Panel"]
layout_mode = 0
offset_left = 224.0
offset_top = 16.0
offset_right = 256.0
offset_bottom = 48.0
texture_normal = ExtResource("8_a7qyv")
stretch_mode = 0

[node name="Label5" type="Label" parent="User_interface/Graphical_user_interface/Tower_Panel/Tower_5"]
layout_mode = 0
offset_top = 32.0
offset_right = 32.0
offset_bottom = 44.0
text = "75 🪙
"
label_settings = SubResource("LabelSettings_dwkyg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tower_6" type="TextureButton" parent="User_interface/Graphical_user_interface/Tower_Panel"]
layout_mode = 0
offset_left = 272.0
offset_top = 16.0
offset_right = 304.0
offset_bottom = 48.0
texture_normal = ExtResource("9_wrer2")
stretch_mode = 0

[node name="Label5" type="Label" parent="User_interface/Graphical_user_interface/Tower_Panel/Tower_6"]
layout_mode = 0
offset_top = 32.0
offset_right = 32.0
offset_bottom = 44.0
text = "150 🪙
"
label_settings = SubResource("LabelSettings_dwkyg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tower_7" type="TextureButton" parent="User_interface/Graphical_user_interface/Tower_Panel"]
layout_mode = 0
offset_left = 272.0
offset_top = 63.0
offset_right = 304.0
offset_bottom = 95.0
texture_normal = ExtResource("13_utv0k")
stretch_mode = 0

[node name="Label5" type="Label" parent="User_interface/Graphical_user_interface/Tower_Panel/Tower_7"]
layout_mode = 0
offset_top = 32.0
offset_right = 32.0
offset_bottom = 44.0
text = "300 🪙
"
label_settings = SubResource("LabelSettings_dwkyg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Stage_Stats_Panel" type="Panel" parent="User_interface/Graphical_user_interface"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0140845
anchor_top = 0.667188
anchor_right = 0.0140845
anchor_bottom = 0.667188
offset_right = 64.0
offset_bottom = 80.0
theme = ExtResource("4_n3cl7")
metadata/_edit_use_anchors_ = true

[node name="Skull_Icon" type="AnimatedSprite2D" parent="User_interface/Graphical_user_interface/Stage_Stats_Panel"]
position = Vector2(20.9997, 66)
sprite_frames = SubResource("SpriteFrames_p4ij2")
autoplay = "default"

[node name="Wellen_Lable" type="Label" parent="User_interface/Graphical_user_interface/Stage_Stats_Panel/Skull_Icon"]
unique_name_in_owner = true
offset_left = 8.0
offset_top = -3.0
offset_right = 24.0
offset_bottom = 8.0
theme = ExtResource("4_n3cl7")
text = "XX
"
horizontal_alignment = 1
vertical_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="Coin_Icon" type="Sprite2D" parent="User_interface/Graphical_user_interface/Stage_Stats_Panel"]
position = Vector2(20.9997, 42)
texture = ExtResource("9_3u1xu")
region_rect = Rect2(357, 69, 6, 6)

[node name="Money_Label" type="Label" parent="User_interface/Graphical_user_interface/Stage_Stats_Panel/Coin_Icon"]
offset_left = 7.0
offset_top = -2.0
offset_right = 31.0
offset_bottom = 10.0
theme = ExtResource("4_n3cl7")
text = "999
"
metadata/_edit_use_anchors_ = true

[node name="Health_Icon" type="TextureProgressBar" parent="User_interface/Graphical_user_interface/Stage_Stats_Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0649319
anchor_top = 0.0222222
anchor_right = 0.0649319
anchor_bottom = 0.0222222
offset_left = 8.0
offset_top = 8.0
offset_right = 24.0
offset_bottom = 24.0
value = 60.0
texture_under = ExtResource("10_je27x")
texture_progress = ExtResource("10_je27x")
tint_under = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Health_Number" type="Label" parent="User_interface/Graphical_user_interface/Stage_Stats_Panel/Health_Icon"]
unique_name_in_owner = true
layout_mode = 2
anchor_left = -0.0625
anchor_top = -0.125
anchor_right = -0.0625
anchor_bottom = -0.125
offset_left = 16.0
offset_top = 8.0
offset_right = 28.0
offset_bottom = 18.0
theme = ExtResource("4_n3cl7")
text = "10
"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Stage_Name_Panel" type="Panel" parent="User_interface/Graphical_user_interface"]
layout_mode = 0
offset_left = 485.0
offset_top = 8.0
offset_right = 629.0
offset_bottom = 56.0
theme = ExtResource("4_n3cl7")

[node name="Fade Left" type="Sprite2D" parent="User_interface/Graphical_user_interface/Stage_Name_Panel"]
self_modulate = Color(0.0941176, 0.0784314, 0.145098, 1)
position = Vector2(-44, 24)
texture = ExtResource("7_3v510")
region_enabled = true
region_rect = Rect2(820, 708, 96, 22)

[node name="Fade Right" type="Sprite2D" parent="User_interface/Graphical_user_interface/Stage_Name_Panel"]
self_modulate = Color(0.0941176, 0.0784314, 0.145098, 1)
position = Vector2(188, 26)
texture = ExtResource("7_3v510")
flip_h = true
region_enabled = true
region_rect = Rect2(820, 708, 96, 22)

[node name="Stage_Name" type="Label" parent="User_interface/Graphical_user_interface/Stage_Name_Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 12.0
offset_right = 136.0
offset_bottom = 36.0
theme = ExtResource("4_n3cl7")
theme_override_font_sizes/font_size = 16
text = "Stage Name"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Settings_Panel" type="Panel" parent="User_interface/Graphical_user_interface"]
layout_mode = 0
offset_left = 1024.0
offset_top = 16.0
offset_right = 1120.0
offset_bottom = 53.0
theme = ExtResource("4_n3cl7")

[node name="Pause_and_Play_Button" type="TextureButton" parent="User_interface/Graphical_user_interface/Settings_Panel"]
process_mode = 3
layout_mode = 2
offset_left = 16.0
offset_top = 10.0
offset_right = 32.0
offset_bottom = 26.0
toggle_mode = true
texture_normal = SubResource("AtlasTexture_fjjb5")
texture_pressed = SubResource("AtlasTexture_dq4ai")
texture_hover = SubResource("AtlasTexture_v03ub")

[node name="SpeedUP_Button" type="TextureButton" parent="User_interface/Graphical_user_interface/Settings_Panel"]
layout_mode = 2
offset_left = 32.0
offset_top = 10.0
offset_right = 48.0
offset_bottom = 26.0
texture_normal = SubResource("AtlasTexture_c0xn0")
texture_pressed = SubResource("AtlasTexture_yykgw")
texture_hover = SubResource("AtlasTexture_yykgw")

[node name="Home_Button" type="TextureButton" parent="User_interface/Graphical_user_interface/Settings_Panel"]
layout_mode = 0
offset_left = 64.0
offset_top = 10.0
offset_right = 80.0
offset_bottom = 26.0
texture_normal = SubResource("AtlasTexture_e4uwa")
texture_pressed = SubResource("AtlasTexture_idqtt")
texture_hover = SubResource("AtlasTexture_g7v1o")

[node name="Menue_Panel" type="Panel" parent="User_interface/Graphical_user_interface"]
visible = false
layout_mode = 0
offset_left = 898.0
offset_top = 195.0
offset_right = 1081.0
offset_bottom = 373.0
theme = ExtResource("4_n3cl7")
script = ExtResource("17_chlvj")

[node name="Menue_Container" type="VBoxContainer" parent="User_interface/Graphical_user_interface/Menue_Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 51.0
offset_top = 42.0
offset_right = 226.0
offset_bottom = 212.0
scale = Vector2(0.5, 0.5)
alignment = 1

[node name="Return_Button" type="Button" parent="User_interface/Graphical_user_interface/Menue_Panel/Menue_Container"]
layout_mode = 2
theme = ExtResource("4_n3cl7")
text = "Return
"

[node name="Main_Menue_Button" type="Button" parent="User_interface/Graphical_user_interface/Menue_Panel/Menue_Container"]
layout_mode = 2
theme = ExtResource("4_n3cl7")
text = "Main Menue"

[node name="Quit_Button" type="Button" parent="User_interface/Graphical_user_interface/Menue_Panel/Menue_Container"]
layout_mode = 2
theme = ExtResource("4_n3cl7")
text = "Quit"

[node name="Note" type="Label" parent="User_interface"]
offset_left = 795.0
offset_top = 553.0
offset_right = 983.0
offset_bottom = 628.0
text = "Note:
Zoom = Mouse wheel
Arrow Keys = Movement"

[node name="Start_Game_Button" type="Button" parent="User_interface"]
offset_left = 385.0
offset_top = 178.0
offset_right = 1041.0
offset_bottom = 380.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("4_n3cl7")
text = "Start_Game
"

[node name="Money_Button" type="Button" parent="User_interface"]
offset_left = 1008.0
offset_top = 528.0
offset_right = 1201.0
offset_bottom = 590.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("4_n3cl7")
text = "add + 50 Money"

[node name="Soundeffects (Autoload soon)" type="Node" parent="."]

[node name="Theme_Song" type="AudioStreamPlayer" parent="Soundeffects (Autoload soon)"]
unique_name_in_owner = true
stream = ExtResource("19_ysbl4")
volume_db = -10.777
autoplay = true

[node name="Pause" type="AudioStreamPlayer" parent="Soundeffects (Autoload soon)"]
unique_name_in_owner = true
stream = ExtResource("14_1nhxf")
volume_db = -25.341

[node name="Hurt" type="AudioStreamPlayer" parent="Soundeffects (Autoload soon)"]
unique_name_in_owner = true
stream = ExtResource("15_smxhu")
volume_db = -18.571

[node name="Cat" type="AudioStreamPlayer" parent="Soundeffects (Autoload soon)"]
unique_name_in_owner = true
stream = ExtResource("15_smxhu")
volume_db = -18.571

[node name="loud-incorrect-buzzer-lie-meme-sound-effect" type="AudioStreamPlayer" parent="Soundeffects (Autoload soon)"]
unique_name_in_owner = true
stream = ExtResource("17_kj3g4")
volume_db = -10.202

[node name="Monster_Scream" type="AudioStreamPlayer" parent="Soundeffects (Autoload soon)"]
unique_name_in_owner = true
stream = ExtResource("16_8dkql")
volume_db = -41.682

[node name="Bump" type="AudioStreamPlayer" parent="Soundeffects (Autoload soon)"]
unique_name_in_owner = true
stream = ExtResource("17_t87a7")
volume_db = -18.571

[node name="Click" type="AudioStreamPlayer" parent="Soundeffects (Autoload soon)"]
unique_name_in_owner = true
stream = ExtResource("18_yunjg")
volume_db = -18.571

[node name="Menu_In" type="AudioStreamPlayer" parent="Soundeffects (Autoload soon)"]
unique_name_in_owner = true
stream = ExtResource("18_6yfku")
volume_db = -18.571

[node name="Menu_Out" type="AudioStreamPlayer" parent="Soundeffects (Autoload soon)"]
unique_name_in_owner = true
stream = ExtResource("19_eoi36")
volume_db = -18.571

[node name="next_wave_check" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0
one_shot = true

[connection signal="toggled" from="User_interface/Graphical_user_interface/Hide_UI_Button" to="User_interface/Graphical_user_interface/Hide_UI_Button" method="_on_toggled"]
[connection signal="pressed" from="User_interface/Graphical_user_interface/Tower_Panel/Tower_1" to="." method="_on_tower_button_pressed" binds= [1]]
[connection signal="pressed" from="User_interface/Graphical_user_interface/Tower_Panel/Tower_2" to="." method="_on_tower_button_pressed" binds= [2]]
[connection signal="pressed" from="User_interface/Graphical_user_interface/Tower_Panel/Tower_3" to="." method="_on_tower_button_pressed" binds= [3]]
[connection signal="pressed" from="User_interface/Graphical_user_interface/Tower_Panel/Tower_4" to="." method="_on_tower_button_pressed" binds= [4]]
[connection signal="pressed" from="User_interface/Graphical_user_interface/Tower_Panel/Tower_5" to="." method="_on_tower_button_pressed" binds= [5]]
[connection signal="pressed" from="User_interface/Graphical_user_interface/Tower_Panel/Tower_6" to="." method="_on_tower_button_pressed" binds= [6]]
[connection signal="pressed" from="User_interface/Graphical_user_interface/Tower_Panel/Tower_7" to="." method="_on_tower_button_pressed" binds= [7]]
[connection signal="pressed" from="User_interface/Graphical_user_interface/Settings_Panel/Pause_and_Play_Button" to="User_interface" method="_on_pause_play_pressed"]
[connection signal="pressed" from="User_interface/Graphical_user_interface/Settings_Panel/SpeedUP_Button" to="User_interface" method="_on_speed_up_pressed"]
[connection signal="pressed" from="User_interface/Graphical_user_interface/Settings_Panel/Home_Button" to="User_interface/Graphical_user_interface/Menue_Panel" method="_on_home_button_pressed"]
[connection signal="pressed" from="User_interface/Graphical_user_interface/Menue_Panel/Menue_Container/Return_Button" to="User_interface/Graphical_user_interface/Menue_Panel" method="_on_return_button_pressed"]
[connection signal="pressed" from="User_interface/Graphical_user_interface/Menue_Panel/Menue_Container/Main_Menue_Button" to="User_interface/Graphical_user_interface/Menue_Panel" method="_on_main_menue_button_pressed"]
[connection signal="pressed" from="User_interface/Graphical_user_interface/Menue_Panel/Menue_Container/Quit_Button" to="User_interface/Graphical_user_interface/Menue_Panel" method="_on_quit_button_pressed"]
[connection signal="pressed" from="User_interface/Start_Game_Button" to="User_interface" method="_on_start_game_button_pressed"]
[connection signal="pressed" from="User_interface/Money_Button" to="User_interface" method="_on_money_button_pressed"]
[connection signal="timeout" from="next_wave_check" to="." method="_on_next_wave_check_timeout"]
